cluster/apps/taqueria-bonjour/backend/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: backend
  namespace: taqueria-bonjour
  labels:
    app: taqueria-bonjour
spec:
  selector:
    app: taqueria-bonjour
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
