cluster/apps/taqueria-bonjour/backend/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: backend
  namespace: taqueria-bonjour
  labels:
    app: taqueria-bonjour
spec:
  rules:
    - host: bonjourinc.com
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              serviceName: backend
              servicePort: 8080
    - host: bonjour.bonjourinc.com
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              serviceName: backend
              servicePort: 8080
    - host: "bonjour.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              serviceName: backend
              servicePort: 8080
